Fix image heiht so that do not overlap in mobile

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -24,7 +24,7 @@
       gap: 20px;
       text-align: center;
       align-items: center;
-      margin-top: 70px;
+      margin-top: 50px;
     }
 
     h1 {
@@ -46,8 +46,10 @@
     position: relative;
     
     @include mobile {
-      padding: 50px;
+      padding: 10px;
       width: 100%;
+      height: 150%;
+
     }
 
 
@@ -72,7 +74,7 @@
         border-radius: 5px;
 
         @include mobile {
-          padding: 10px;
+          padding: 5px;
         }
       }
 
@@ -83,7 +85,7 @@
         cursor: pointer;
         font-weight: 500;
         @include mobile {
-          padding: 10px;
+          padding: 5px;
         }
       }
     }
