--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -76,7 +76,7 @@
 
     img{
       width: 100%;
-      height: 60%;
+     // height: 250%;
       object-fit: cover;
     }
   }
